[package]
name = "wol-relay"
version = "0.1.0"
edition = "2021"

[dependencies]
pnet = "0.35"
tokio = { version = "1.38", features = [ "full" ] }
tokio-util = "0.7"
clap = { version = "4.5", features = [ "derive" ]}
ctrlc = "3.4"
shellexpand = "3.1"
serde = { version = "1.0", features = [ "derive" ] }
serde_yml = "0"
log = "0.4"
simple_logger = { version = "5.0", default-features = false, features = [ "colors" ] }
