[package]
name = "wol-relay"
version = "0.1.0"
edition = "2021"
authors = [ "Jonas Jelonek <jelonek.jonas@gmail.com>" ]

[dependencies]
pnet = "0.35"
tokio = { version = "1.43", features = [ "full" ] }
tokio-util = "0.7"
clap = { version = "4.5", features = [ "derive" ]}
ctrlc = "3.4"
log = "0.4"
simple_logger = { version = "5.0", default-features = false, features = [ "colors" ] }
anyhow = "1.0"

[profile.release]
lto = true
codegen-units = 1
opt-level = "z"
strip = "symbols"
panic = "abort"
